--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
 dataclasses-json==0.6.0
+dnspython==2.4.2
 frozenlist==1.4.0
 gitdb==4.0.10
 GitPython==3.1.37
@@ -40,6 +41,7 @@ pydantic==2.3.0
 pydantic_core==2.6.3
 pydeck==0.8.1b0
 Pygments==2.16.1
+pymongo==4.5.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
